--- a/src/front/components/header.html
+++ b/src/front/components/header.html
@@ -12,7 +12,7 @@
             <h1>Clínica Médica</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Início</a></li>
+                    <li><a href="../index.html">Início</a></li>
                     <li><a href="#">Serviços</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
