--- a/src/front/assets/css/header.css
+++ b/src/front/assets/css/header.css
@@ -2,10 +2,10 @@ header {
     background: #333;
     color: #fff;
     padding: 20px 0;
-    margin: 0;
 }
 
 header h1 {
+    color: #fff;
     float: left;
     margin-left: 20px;
 }
