--- a/src/front/components/header.html
+++ b/src/front/components/header.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header</title>
-    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="/TPPOO-Clinica/src/front/assets/css/header.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -20,4 +22,5 @@
         </div>
     </header>
 </body>
+
 </html>
