Fix: ajustes no CSS nas páginas

--- a/src/front/components/header.html
+++ b/src/front/components/header.html
@@ -14,7 +14,7 @@
             <h1>Clínica Médica</h1>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Início</a></li>
+                    <li><a href="/TPPOO-Clinica/src/front/index.html">Início</a></li>
                     <li><a href="#">Serviços</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
