--- a/src/front/assets/css/consultas.css
+++ b/src/front/assets/css/consultas.css
@@ -2,13 +2,18 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 h1 {
     color: #2c3e50;
 }
 
+
 form {
+    justify-content: center;
     background-color: #fff;
     padding: 1.5rem;
     border-radius: 8px;
@@ -42,4 +47,8 @@ button {
 
 button:hover {
     background-color: #2980b9;
+}
+
+#footer {
+    margin-top: auto; 
 }
