--- a/src/front/assets/css/footer.css
+++ b/src/front/assets/css/footer.css
@@ -4,4 +4,7 @@ footer {
     text-align: center;
     padding: 20px 0;
     margin-top: 40px;
+    width: 100%;
+    height: auto;
+    margin-top: auto;
 }
