--- a/src/front/assets/css/historico.css
+++ b/src/front/assets/css/historico.css
@@ -1,11 +1,15 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    padding: 2rem;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 h1 {
     color: #2c3e50;
+    text-align: center;
 }
 
 table {
@@ -19,7 +23,7 @@ table {
 th,
 td {
     padding: 1rem;
-    text-align: left;
+    text-align: center;
     border-bottom: 1px solid #ddd;
 }
 
@@ -30,4 +34,8 @@ th {
 
 tr:hover {
     background-color: #f1f1f1;
+}
+
+#footer {
+    margin-top: auto; 
 }
