--- a/src/front/assets/css/home.css
+++ b/src/front/assets/css/home.css
@@ -11,6 +11,11 @@ body {
     background-color: #f4f4f4;
 }
 
+div.body-content{
+  /** Essa margem vai evitar que o conteudo fique por baixo do rodapé **/
+  margin-bottom: 40px;
+}
+
 .container {
     width: 90%;
     max-width: 1100px;
