--- a/src/front/assets/css/medicos.css
+++ b/src/front/assets/css/medicos.css
@@ -1,6 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 h1 {
@@ -21,4 +24,14 @@ th, td {
 
 th {
     background-color: #f2f2f2;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#footer {
+    margin-top: auto; 
 }
