--- a/src/front/assets/css/pacientes.css
+++ b/src/front/assets/css/pacientes.css
@@ -1,6 +1,16 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
+    margin: 0px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
@@ -22,3 +32,8 @@ th, td {
 th {
     background-color: #f2f2f2;
 }
+
+#footer {
+    margin-top: auto; 
+}
+
