--- a/src/front/assets/css/header.css
+++ b/src/front/assets/css/header.css
@@ -1,11 +1,11 @@
 header {
-    background: #333;
-    color: #fff;
+    background: #212529;
+    color: #2973B2;
     padding: 20px 0;
 }
 
 header h1 {
-    color: #fff;
+    color: #f8f9fa;
     float: left;
     margin-left: 20px;
 }
