--- a/src/front/assets/css/home.css
+++ b/src/front/assets/css/home.css
@@ -7,24 +7,23 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    color: #333;
-    background-color: #f4f4f4;
+    color: #212529;
+    background-color: #dee2e6;
+    font-family: 'Exo', sans-serif;
 }
 
-div.body-content{
-  /** Essa margem vai evitar que o conteudo fique por baixo do rodapé **/
-  margin-bottom: 40px;
+div.body-content {
+    margin-bottom: 40px;
 }
 
 .container {
     width: 90%;
-    max-width: 1100px;
     margin: auto;
 }
 
 /* Hero */
 .hero {
-    background: #007BFF;
+    background: #adb5bd;
     color: white;
     padding: 100px 0;
     text-align: center;
@@ -34,7 +33,7 @@ div.body-content{
     display: inline-block;
     margin-top: 20px;
     background: white;
-    color: #007BFF;
+    color: #212529;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
@@ -43,7 +42,7 @@ div.body-content{
 /* Serviços */
 .servicos {
     padding: 60px 0;
-    background: #fff;
+    background: #dee2e6;
     text-align: center;
 }
 
@@ -58,9 +57,11 @@ div.body-content{
     flex: 1;
     margin: 10px;
     padding: 20px;
-    background: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    background: #e9ecef;
+    border-color: #212529;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    color: #212529;
 }
-
-
