--- a/src/front/components/header.html
+++ b/src/front/components/header.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <div class="container">
-            <h1>Clínica Médica</h1>
+        <div class="containerheader">
+            <a href="/TPPOO-Clinica/src/front/index.html"><h1>Clínica Médica</h1></a>
             <nav>
                 <ul>
                     <li><a href="/TPPOO-Clinica/src/front/index.html">Início</a></li>
