Alterações no CSS da home, header e footer

--- a/src/front/components/footer.html
+++ b/src/front/components/footer.html
@@ -9,7 +9,7 @@
 <body>
     <footer>
         <div class="container">
-            <p>&copy; 2025 Minha Empresa. Todos os direitos reservados.</p>
+            <p>&copy; 2025 TP - Clínica Médica. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
