--- a/src/front/assets/css/home.css
+++ b/src/front/assets/css/home.css
@@ -29,6 +29,11 @@ div.body-content {
     text-align: center;
 }
 
+.hero h2{
+    font-size: 50px;
+    text-decoration-line: underline;
+}
+
 .hero .btn {
     display: inline-block;
     margin-top: 20px;
@@ -48,20 +53,22 @@ div.body-content {
 
 .cards {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
+    gap: 20px;
     margin-top: 30px;
 }
 
 .card {
-    flex: 1;
-    margin: 10px;
+    flex: 1 1 300px;
+    max-width: 300px;
+    height: auto;
     padding: 20px;
     background: #e9ecef;
-    border-color: #212529;
-    border-style: solid;
-    border-width: 1px;
+    border: 1px solid #212529;
     border-radius: 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     color: #212529;
+    box-sizing: border-box;
 }
+
