--- a/src/front/components/header.html
+++ b/src/front/components/header.html
@@ -15,8 +15,8 @@
             <nav>
                 <ul>
                     <li><a href="/TPPOO-Clinica/src/front/index.html">Início</a></li>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="serviços#">Serviços</a></li>
+                    <li><a href="#">Sobre</a></li>
                 </ul>
             </nav>
         </div>
