--- a/src/front/assets/css/home.css
+++ b/src/front/assets/css/home.css
@@ -22,6 +22,7 @@ div.body-content {
 }
 
 /* Hero */
+
 .hero {
     background: #adb5bd;
     color: white;
@@ -29,7 +30,7 @@ div.body-content {
     text-align: center;
 }
 
-.hero h2{
+.hero h2 {
     font-size: 50px;
     text-decoration-line: underline;
 }
@@ -45,6 +46,7 @@ div.body-content {
 }
 
 /* Serviços */
+
 .servicos {
     padding: 60px 0;
     background: #dee2e6;
@@ -72,3 +74,93 @@ div.body-content {
     box-sizing: border-box;
 }
 
+/* Sobre */
+
+.Sobre {
+    padding: 20px;
+    max-width: 1000px;
+    margin: auto;
+}
+
+.Sobre h2,
+.Sobre h3 {
+    text-align: center;
+}
+
+.Sobre .equipe {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+h3{
+    margin-top: 25px;
+}
+
+.membro {
+    text-align: center;
+    width: 150px;
+}
+
+.membro img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+}
+
+.membro p {
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+/* Navegação */
+
+.acesso-rapido {
+  padding: 40px 20px;
+  text-align: center;
+}
+
+.acesso-rapido h2 {
+  font-size: 2em;
+  margin-bottom: 30px;
+  color: #333;
+}
+
+.links-sistema {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.link-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 160px;
+  height: 160px;
+  background-color: #e9ecef;
+  border: 1px solid #212529;
+  border-radius: 12px;
+  text-decoration: none;
+  color: #212529;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.link-box:hover {
+  background-color: #212529;
+  color: white;
+  transform: translateY(-5px);
+}
+
+.link-box i {
+  font-size: 2.5em;
+  margin-bottom: 10px;
+}
