Fix: header links

--- a/src/front/components/header.html
+++ b/src/front/components/header.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <div class="containerheader">
-            <a href="/src/front/index.html"><h1>Clínica Médica</h1></a>
+            <a href="/src/front/index.html"><h1>HorusMed</h1></a>
             <nav>
                 <ul>
                     <li><a href="/src/front/index.html">Início</a></li>
-                    <li><a href="serviços#">Serviços</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="https://github.com/CleberGomesJr/TPPOO-Clinica">GitHub</a></li>
+                    <li><a href="#Sobre">Sobre</a></li>
                 </ul>
             </nav>
         </div>
